@@ -15,6 +15,9 @@ Version 1.2-svn
  * sound
    * add advanced sound tab to pref allowing you to play with sample_rate and buffer_size options
    * set default sample rate to 44100 hz as most user got cracking sound pb with 22050
+ * multiplayer
+   * game management
+     * fixed controler change not sended to all client (bug #8138)
 
 Version 1.2:
  * campaigns:
